@@ -1,6 +1,7 @@
 Changes in synthPop version 0.1.9
   * whipple index (original and modified) included
   * sprague index included
+  * simInitSpatial() to generate districts from a broader region
 
 Changes in synthPop version 0.1.8
   * remove S3-class spBwplot() -> only default method was implemented. Removed option to supply a list of populations; rewritten to use 'synthPopObj'-objects
